crates/sid-ui/tests/snapshots/snapshots__styled_block_cosmos_40x6.snap
---
source: crates/sid-ui/tests/snapshots.rs
assertion_line: 98
expression: rows
---
- ┌ ✦   example   ───────────────────────┐
- │                                      │
- │                                      │
- │                                      │
- │                                      │
- └──────────────────────────────────────┘
