crates/sid-ui/tests/snapshots/snapshots__styled_block_cosmos_light_40x6.snap
---
source: crates/sid-ui/tests/snapshots.rs
assertion_line: 137
expression: rows
---
- ┌ ✦   example   ───────────────────────┐
- │                                      │
- │                                      │
- │                                      │
- │                                      │
- └──────────────────────────────────────┘
