crates/sid-ui/tests/snapshots/snapshots__styled_block_dusk_40x6.snap
---
source: crates/sid-ui/tests/snapshots.rs
assertion_line: 124
expression: rows
---
- ┌ ✦   example   ───────────────────────┐
- │                                      │
- │                                      │
- │                                      │
- │                                      │
- └──────────────────────────────────────┘
