crates/sid-ui/tests/snapshots/snapshots__styled_block_void_40x6.snap
---
source: crates/sid-ui/tests/snapshots.rs
assertion_line: 111
expression: rows
---
- ┌ ✦   example   ───────────────────────┐
- │                                      │
- │                                      │
- │                                      │
- │                                      │
- └──────────────────────────────────────┘
